<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:id="@+id/ivDetail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_collapseMode="parallax"
                        android:src="@drawable/moviehd"
                        android:paddingBottom="30dp"
                        android:background="@mipmap/landscape_shape"
                        android:scaleType="fitXY"
                        />
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_bg" >
                    </FrameLayout>
                </FrameLayout>
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:paddingLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:background="@drawable/circle_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_back_arrow_foreground"/>

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toTopOf="@id/iv_back"
                    app:layout_constraintBottom_toBottomOf="@id/iv_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_search_foreground"/>

                <ImageView
                    android:id="@+id/iv_dateTime"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="@dimen/margin_small"
                    android:src="@drawable/ic_date_time_foreground"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_movieYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2016"
                    android:layout_marginBottom="@dimen/margin_small"
                    app:cornerRadius="16dp"
                    android:backgroundTint="#F4C53E"
                    app:layout_constraintBottom_toTopOf="@+id/tvMovieTitle"
                    app:layout_constraintStart_toStartOf="@+id/iv_back"/>

                <TextView
                    android:id="@+id/tvMovieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/btn_movieYear"
                    android:textColor="@android:color/white"
                    android:singleLine="false"
                    android:textStyle="normal"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintBottom_toTopOf="@+id/iv_dateTime"/>

                <ImageView
                    android:id="@+id/ivFavourite"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_dateTime"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_dateTime"
                    android:src="@drawable/ic_favourite_foreground"/>



                <RatingBar
                    android:id="@+id/rating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="2"
                    android:stepSize="1"
                    android:layout_marginTop="10dp"
                    android:theme="@style/RatingBar"
                    app:layout_constraintTop_toTopOf="@+id/btn_movieYear"
                    app:layout_constraintEnd_toStartOf="@+id/tvCount"
                    />

                <TextView
                    android:id="@+id/tvCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_movieYear"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_movieYear"
                    android:text="9,75"
                    android:layout_marginRight="@dimen/margin_large"
                    style="@style/TextAppearance.MaterialComponents.Headline3"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/tvVoteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:text="38888 Votes"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_movieYear"
                    app:layout_constraintEnd_toStartOf="@+id/tvCount"/>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="false"
                    android:layout_marginLeft="@dimen/margin_small"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:layout_constraintEnd_toStartOf="@+id/ivFavourite"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_dateTime"
                    app:layout_constraintStart_toEndOf="@+id/tvDateTime"
                    app:layout_constraintTop_toTopOf="@+id/iv_dateTime"
                    >
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:id="@+id/rating_chip_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_Family"
                        app:chipBackgroundColor="@color/chipBg"
                        android:textColor="@android:color/white"
                        />
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:id="@+id/rating_chip_two"
                        android:layout_width="wrap_content"
                        android:text="@string/str_fantasy"
                        app:chipBackgroundColor="@color/chipBg"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"/>
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:id="@+id/rating_chip_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipBackgroundColor="@color/chipBg"
                        android:text="@string/str_adventure"
                        android:textColor="@android:color/white"
                        />
                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/tvDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_dateTime"
                    app:layout_constraintStart_toEndOf="@+id/iv_dateTime"
                    app:layout_constraintTop_toTopOf="@+id/iv_dateTime"
                    android:text="2h 13min"
                    android:textSize="10dp"
                    android:textColor="@android:color/darker_gray"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="733dp"
            >

            <TextView
                android:id="@+id/tv_storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/str_txtStoryline"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_storylineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="8"
                android:singleLine="false"
                android:text="After arriving home from the movies one night, I decided that I was not going to be a moviegoer anymore. I was tired of the problems involved in getting to the movies and dealing with the theater itself and some of the patrons. The next day I arranged to have cable TV service installed in my home."
                android:textColor="@android:color/white"
                android:paddingLeft="@dimen/margin_large"
                android:paddingRight="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_storyline" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_trailerMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:backgroundTint="#F4C53E"
                android:paddingLeft="@dimen/margin_small"
                android:text="@string/txt_btnPlayTrailer"
                app:cornerRadius="24dp"
                app:icon="@drawable/ic_play_foreground"
                app:iconGravity="start"
                app:iconSize="38dp"
                app:iconTint="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="@+id/tv_storyline"
                app:layout_constraintTop_toBottomOf="@+id/tv_storylineText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_rateMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:backgroundTint="@android:color/transparent"
                android:paddingLeft="@dimen/margin_small"
                android:text="@string/txt_btnRateMovie"
                app:cornerRadius="24dp"
                app:icon="@drawable/ic_rate_foreground"
                app:iconGravity="start"
                app:iconSize="38dp"
                app:iconTint="#F4C53E"
                app:layout_constraintStart_toEndOf="@+id/btn_trailerMovie"
                app:layout_constraintTop_toBottomOf="@+id/tv_storylineText"
                app:strokeColor="@android:color/white"
                app:strokeWidth="2dp" />

            <LinearLayout
                android:id="@+id/layoutOne"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_trailerMovie"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:background="#95163850"
                android:orientation="vertical"
                >
                <include
                    android:id="@+id/actor_view_pod_reaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    layout="@layout/view_pod_reaction"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvActor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"/>
            </LinearLayout>


            <include
                android:id="@+id/aboutFilm"
                layout="@layout/about_flim_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintTop_toBottomOf="@+id/layoutOne"
                />

            <LinearLayout
                android:id="@+id/layoutCreator"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:layout_constraintTop_toBottomOf="@+id/aboutFilm"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:background="#95163850"
                android:orientation="vertical"
                >
                <include
                    android:id="@+id/creator_view_pod_reaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    layout="@layout/view_pod_reaction"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCreator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>