<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_marginTop="38dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/black">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_navigation"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Discover"
                            android:textColor="@android:color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            style="@style/TextAppearance.MaterialComponents.Headline5"/>

                        <ImageView
                            android:id="@+id/iv_search"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:src="@drawable/ic_search_foreground"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </Toolbar>
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/topMovieSlider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:sliderAnimationDuration="600"
                    android:layout_marginTop="55dp"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderCircularHandlerEnabled="true"
                    app:sliderIndicatorAnimationDuration="100"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#FFEB3B"
                    app:sliderIndicatorUnselectedColor="@android:color/darker_gray"
                    app:sliderScrollTimeInSec="5"
                    app:sliderStartAutoCycle="true"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

                <ImageView
                    android:id="@+id/ivPlayMovie"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="84dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_play_movie_foreground"
                    app:layout_constraintTop_toTopOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:id="@+id/tvBestPopularMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bestPopularMovie"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBestPopularMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_large"
                app:layout_constraintStart_toStartOf="@+id/tvBestPopularMovie"
                app:layout_constraintTop_toBottomOf="@+id/tvBestPopularMovie"/>


            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:background="#95163850"
                android:layout_margin="@dimen/margin_large"
                app:layout_constraintTop_toBottomOf="@+id/rvBestPopularMovie"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_checkMovieShowTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_checkMovieShowTime"
                        android:textColor="@android:color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginLeft="12sp"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        />

                    <TextView
                        android:id="@+id/tvSeeMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSeeMore"
                        android:textAllCaps="true"
                        android:textColor="#FFEB3B"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_checkMovieShowTime"
                        android:layout_marginBottom="@dimen/margin_large"/>

                    <ImageView
                        android:id="@+id/ivLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/ic_location_foreground"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTab"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="auto"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:background="@android:color/black"
                    app:tabTextColor="@android:color/darker_gray"
                    app:tabSelectedTextColor="@android:color/white"
                    app:tabIndicatorColor="@color/colorYellow"
                    app:tabGravity="fill"/>
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">
                </androidx.viewpager.widget.ViewPager>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutOne"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutTab"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:background="#95163850"
                android:orientation="vertical"
                >
                <include
                    android:id="@+id/showCase_view_pod_reaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    layout="@layout/view_pod_reaction"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShowCases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBottom"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutOne"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:background="@android:color/black"
                android:orientation="vertical"
                >
                <include
                    android:id="@+id/bestActor_view_pod_reaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    layout="@layout/view_pod_reaction"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBestActor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/vpEmpty"
        layout="@layout/view_pod_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>